--- a/gb/news392_4.md
+++ b/gb/news392_4.md
@@ -1,4 +1,25 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/fjHps" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/asdfghy6/yh/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/asdfghy6/fq/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11531541.md#1" target="_blank">千瑞：最后的忠告</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/19/n11531541.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/10/f62864aa9eb9290d746a4a351482e9d7-150x120.png" align ="left"></a>朋友，你从何处来，将向何处去？
+这你可曾想过？
+不要再沉睡，晨钟响彻了万里。
+你说“我要挣钱”，这不是你的错。
+但你要知道：
+这钱是否干净，还是滴着人血，背着罪恶？
+你说“我要做官”，这不是你的过。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 1:29 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/18/n11531064.md#1" target="_blank">袁斌：胡锡进都吐槽北京安检太多 说明了什么</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/18/n11531064.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1412230452072039-600x400-150x120.jpg" align ="left"></a>今年10月1日是中共建政70周年，北京将举行规模空前的大阅兵和大游行。
+
+为了确保庆祝活动万无一失，从首都到全国各地，上上下下，中共简直就跟如临大敌一般，神经绷的可以说是紧的不能再紧了，以至于各级官员们的举动似乎不像在准备一个盛大的节日，倒像是要预防一场大难。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 10:56 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/18/n11530689.md#1" target="_blank">杨宁：许家印传被边控 陆港富豪寒意彻骨</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/18/n11530689.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/150330092020100311-150x120.jpg" align ="left"></a>要知道，他们与之前被中共下狱的安邦吴小晖、明天系肖建华一样，共同点都是通过与中共权贵的合作做强、做大。在这个过程中，他们了解了中共相当多的黑幕，甚至帮助中共做了一些不该做的事情。在他们被中共利用完，价值不多后，被卸磨杀驴也是注定的结果。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 5:39 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/18/n11530692.md#1" target="_blank">宁静：今日香港正是《魔戒》中的白城</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/18/n11530692.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/20190614-HUAMING-HONGKONG-03-600x400-1-150x120.jpg" align ="left"></a>当成千上万的香港人在大街上高喊着“天灭中共”的时候，我仿佛看到了《魔戒》中那座正在被魔兽大军围困的白色城堡“米那斯提力斯”。一边是貌似柔弱孤立的几百万香港人，用自己赢弱的身躯在保卫着自己的孤城，一边是七十年来被无神论彻底毁掉了人的道德、只知道追求血腥物质享受的半兽人组成的强大武装。今天的香港街头之战，那决不仅仅是一场捍.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 3:55 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/18/n11530596.md#1" target="_blank">周晓辉：美国新国安顾问为何让中共更恐惧？</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/18/n11530596.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1158974760-600x400-1-150x120.jpg" align ="left"></a>奥布兰恩的观点与川普总统相契合，即他们都认识到了中共才是美国所面临的真正威胁。而此前的博尔顿虽然也强硬反共，但其主张用武力解决伊朗和朝鲜问题，而不是专注打击中共，很可能将美国拖入战争的泥潭，并给予中共以喘息机会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 3:38 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/18/n11530568.md#1" target="_blank">张林：香港与东帝汶</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/18/n11530568.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1909150548342188-600x400-2-1-150x120.jpg" align ="left"></a>尽管大部分香港人仍然希望完全落实具有国际法性质的“英中联合声明”，贯彻一国两制、港人治港。但是中共发扬无赖秉性，早已不再承认英中协议，并且决心奴役700万香港人。
+
+而且面对拒绝为奴和抵抗的香港人，中共一律称之为港独。中共这样做，主要是为了愚弄中国民众仇恨香港人，并且为将来军管香港做舆论准备。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 2:44 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/18/n11530378.md#1" target="_blank">王友群：港府和警察应该倾听李嘉诚的建议</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/18/n11530378.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/DSC_1148-600x400-1-150x120.jpg" align ="left"></a>香港反送中运动持续3个多月，至今无解。
+
+有两个群体最累：一是坚持反送中“五大诉求，缺一不可”的香港民众；二是天天全幅武装参与镇压香港抗争者的香港警察。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 1:10 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/18/n11529653.md#1" target="_blank">归正：对“群”的感悟</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/18/n11529653.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/313042_medium-600x400-150x120.jpg" align ="left"></a>那个已经被神定为将要淘汰的人群首先都是中共邪教诽谤、迫害法轮功的魔头江泽民及其邪恶集团头目，参与迫害过法轮功并拒绝退出中共的人，以及所有仍带着兽印或仇视法轮功的人。所以当神淘汰中共时，那些追随者就成了它的陪葬品。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月18日 6:51 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/18/n11528752.md#1" target="_blank">程晓容：BBC访谈 陈方安生犀利回击中共</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/18/n11528752.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/1906160705311366-150x120.jpg" align ="left"></a>陈方安生对中共有着清醒的认识，普世价值的缺失及被破坏，导致了人民的苦难和社会的动荡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月18日 3:08 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/18/n11528837.md#1" target="_blank">袁斌：中共为何要用习语录取代“摩西十诫”</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/18/n11528837.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/2a4b67da0d2e26f1183bb7bb20c986cb-600x360-1-150x120.jpg" align ="left"></a>去年11月，河南省洛宁县一处教堂被当地政府强迫删除十诫中的第一条诫命“不可拜耶和华以外的神”，此后中国其它地区也陆续出现了十诫标幅被换成毛泽东和习近平画像的事件。
 
 据关注中国人权、宗教状况的《寒冬》杂志9月15日报导，近期又传出河南洛阳市某县干脆将十诫换成了“习近平语录”。一位要求不具名的信徒透露，截至目前，该县.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月18日 11:50 AM			</td></tr>
@@ -13,15 +34,20 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/17/n11526509.md#1" target="_blank">可心：法轮功学员坚持20年的和平反迫害抗争</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/17/n11526509.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/190516152951100651-150x120.jpg" align ="left"></a>近代出现了一种独特和成功的争取自身权益的方式﹐即用大规模非暴力不服从的方式来反抗强权的歧视﹑压迫和剥削。非暴力抵抗运动，指通过非暴力抗争捍卫人权，争取自由和正义，起源于圣雄甘地（Mohandas KaramchandGandhi）领导的印度独立运动。二十世纪五十年代末和六十年代﹐美国非裔民权运动领袖马丁·路德金（Mar.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月17日 12:21 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11526232.md#1" target="_blank">“红色巨无霸”是经济全球化造就的一个阴影</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11526232.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/9edfe69f203d4ff72da7ead155ed6215-150x120.jpg" align ="left"></a>川普上任后开始清理他的前任们留下的负面遗产，其中最主要的一项就是重新调整美中关系。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月17日 12:19 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/17/n11526472.md#1" target="_blank">袁斌：矛头对准地产商中共图转移反送中视线</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/17/n11526472.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/bf5dc465e429ee30f79d7d1a7378786f-600x400-150x120.jpg" align ="left"></a>自从反送中运动风潮迭起后，网络上一直就有一种以民间方式出现的为中共洗地的声音，称香港社会的深层次矛盾是大地产商与普通民众的矛盾，但港人却把他们的怒火发泄到特区政府和中共头上，完全搞错了方向。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月17日 11:09 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/17/n11526283.md#1" target="_blank">戈壁东：入美籍的中共侨领声言要实施人权迫害</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/17/n11526283.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/15c517bcb6d8caef_ttl7dayVRP_d7e7a5b6aa5d3382-150x120.jpg" align ="left"></a>洛杉矶刚刚发生了一件令人震惊的事件，一个叫陈军的人在庆中共“国庆”活动上，公开对前来抗议的美国华人说：“你们是什么身份？我已经录下了你们的照片，你们如果是绿卡，就回不到中国去了；回去中国就把你们抓起来。如果你是美国公民，你永远拿不到旅游签证”。他的这些公开人权迫害威胁被拍下了完整视频。他说话的时候，手里拿着扩音话筒，他.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月17日 8:25 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11525307.md#1" target="_blank">赵凤华：信念是一盏烛灯</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11525307.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1a1982109bfcaa64c7ab0aeed19e442e-150x120.jpg" align ="left"></a>信念，是一盏烛灯，在黑暗退去之前，为人指引道路，见证光明。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 9:51 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524663.md#1" target="_blank">陈思敏：美国经济仍亮眼 中共贸战押错注</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524663.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/000_1J80ZR-600x400-2-150x120.jpg" align ="left"></a>按照中共商务部稍早宣布，中美10月份将在华盛顿展开新一轮协商。中共打贸易战明显在拖的一个押注是：中国经济虽然下行，美国经济也在放缓。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 8:15 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11522585.md#1" target="_blank">程晓容：香港掀风暴 中共的“敌人”知多少</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11522585.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1909141942181538-1-150x120.jpg" align ="left"></a>德媒的评论一针见血。中共之所以树敌众多，而且动不动就如临大敌，乃是因为，凡是维护普世价值的个人、国家、观点、举动，都被中共视为敌人、敌对言行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 5:00 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524612.md#1" target="_blank">石铭：人权迫害者的厄运正在到来</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524612.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/01/1506040018281657-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" align ="left"></a>据明慧网二零一九年九月十日报导，法轮功将向美移民局提供在美恶人名单。文章指出：“近日，美国移民与海关执法局（ICE，Immigration and Customs Enforcement）通过在纽约、旧金山、亚特兰大、洛杉矶等十二个城市的办公室在全国范围内展开统一的“绝无藏匿之地”（No Safe Haven）行动，逮.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 2:33 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524162.md#1" target="_blank">袁斌：反送中成了中共造假新闻的照妖镜</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524162.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/7be367ac104c2fe220e955a9b31d2cda-600x400-1-150x120.jpg" align ="left"></a>日前，央视转播了一个“16岁香港女孩曝曾被暴徒性侵”视频。这个视频来自一个署名“深海鱼”的人在推特发布的两条推，先讲述14岁少女被朋友拉去参加集会，然后遭到多次性侵。后来的推中少女年龄变成16岁，最后决定报警，“希望警察可以处理这班人渣”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 11:41 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524023.md#1" target="_blank">魏京生：第二次冷战开始了吗？</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524023.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/d9d5e783301fb296c3dc811061278082-600x400-1-150x120.jpg" align ="left"></a>美国的智库和媒体谈论第二次冷战，已经有些日子了。最近突然上升成为了主调，数量大增。一些人认为不可避免，一些人认为看上去不像。多数人都是以上一次和苏联的冷战作模本在议论，我认为有些刻舟求剑，不得要领。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 10:03 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11523724.md#1" target="_blank">周晓辉：沙特石油设施被炸 美国为何要警惕中共？</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11523724.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/000_1KA0YT-600x400-1-150x120.jpg" align ="left"></a>而这或许释放的信号就是美国依旧不会卷入新的中东战争，但绝不会坐视伊朗继续挑衅，美国坚定的盟友以色列将在中东发挥更为重要的作用，亦如之前对伊朗在海外的军事基地实施打击一样。不过，这对于美国并不足够，对于背后真正的操盘手中共，美国该放出什么大招予以打击呢?......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 6:17 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11523702.md#1" target="_blank">张菁：科技和科技公司给人们带来的危机</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11523702.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/0881366d37bf5134fe2f17656d666023-600x400-150x120.jpg" align ="left"></a>目前高科技对人们隐私的威胁步步紧逼，在一个道德沦丧，没有人性底线的社会中，科技公司如果只考虑中共的需求，在中共妄想管天、管地、甚至管控人们思想的变态需求下，把技术用于做恶，结果必然是被科技所害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 4:02 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/18/n11530754.md#1" target="_blank">王赫：川普政府如何评说中共“流氓政权”</a><br></h3>川普就任美国总统后，不仅一举扭转了自尼克松总统以来的对华大战略（以妥协为主要特征），而且也重塑了美国政府眼中的中共形象。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月19日 3:59 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/18/n11529099.md#1" target="_blank">云鹤天：一七令?说“党”</a><br></h3>帮。
+撒旦，魔王。
+西来鬼，杀人狂。
+神州大地，百孔千疮。
+崇坑蒙拐骗，反俭让温良。
+颠倒是非曲直，风行暗妓明娼。
+十恶不赦共产党，毒如蛇蝎狠如狼。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月18日 2:10 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/18/n11529046.md#1" target="_blank">理悟：中共二杆子</a><br></h3>枪杆子里面出政权，
+笔杆子宣传谎骗煽。
+中共贯耍二杆子，
+土匪做大夺江山。
+六四学潮反贪腐，
+渴望民主泣泪言。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月18日 1:56 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/18/n11529006.md#1" target="_blank">中共“出入境身份认证”新规存隐患</a><br></h3>中共国家移民管理局9月11日公布“出入境证件身份认证管理办法”，出台出入境证件身份认证平台，今后公共服务部门和其它行业，可依此平台，对出入境证件做身份认证，该平台预计在今年底正式实施。
 
 中共在公布的管理办法中，声称境外人员回国办事或旅游等，提供快捷服务，达到与中国境内居民使用身份证办事相同的便利。这代表持有美国绿.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月18日 1:41 PM			</td></tr>
@@ -47,11 +73,5 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/17/n11526421.md#1" target="_blank">戈壁东：中共“70周年庆”成民众灾难日</a><br></h3>还有半个月就是中共窃国70周年。9月15日，洛杉矶有一群亲共人士，在蒙特利公园再次举办升旗闹剧。照例，洛杉矶海外华人团体，会去声讨他们为利益出卖良知。其实亲共人士也知道中共的末日已近，他们应该感谢美国的自由民主，能让他们平安地在这里闹腾，而中共在其统治的国家里过“国庆”，就像在过难关，战战兢兢、如临大敌。
 
 最近传.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月17日 10:37 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524312.md#1" target="_blank">金浴凤：红朝恨赋</a><br></h3>凭空坠落，遍地蒙冤，高山溅血，江海萦骨。
-首恨神佛，砸庙毁像。神龛无光，贝叶投火，和尚参军，尼姑改嫁。隐赤共而混佛协，改经义而颂邪党，妆门面而变市场。
-次恨传统，焚典销迹。先贤尸暴，孔门杏伐，侮辱斯文，揪斗大师，或灰心而沉江湖，或忍耻而度残生，或弃国而走他乡。
-再恨人民，血雨腥风。频掀运动，摧骨诛心，抢夺财货，背.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 12:19 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11524103.md#1" target="_blank">关于改变两位大学校长死刑判决的紧急呼吁</a><br></h3>中国维吾尔自治区高等法院并自治区党委、政府：我们惊悉原新疆大学校长塔西甫拉提·特依拜（Tashpolat Tiyip）和新疆医科大学原校长哈木拉提·乌普尔（Halmurat Ghopur）被判死刑（大赦国际消息说，两人被判死缓后目前面临实际执行。也有其他消息源说是被直接判处死刑），对此我们深感震惊和不解。并紧急呼吁你们.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 10:42 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/16/n11523985.md#1" target="_blank">谭笑飞：闲谈中共的“问责”与“背锅”</a><br></h3>9月1日，中共修订了《问责条例》。从社团、企业到国家，章程中都有奖惩条款，目的是维护纪律和秩序，引导和激励成员去实现这个组织的目标。中共也不例外，但是中共的奖惩制度，不是中共《党章》或者《问责条例》之类的明文规定，而是特有的潜规则。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月16日 9:01 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/asdfghy6/djy/blob/master/gb/news392_4.md#1<br><a href="https://github.com/asdfghy6/djy/blob/master/gb/news392_4.md#1"><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/asdfghy6/djy/blob/master/gb/news392_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_4.htm">http://www.epochtimes.com/gb/news392_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
